[gd_scene load_steps=13 format=3 uid="uid://ba5d3ju4aifem"]

[ext_resource type="Script" uid="uid://ckep4dica0ehr" path="res://scripts/player.gd" id="1_e5mgh"]
[ext_resource type="PackedScene" uid="uid://ddfkau7vlwtjp" path="res://character/character-female-b.glb" id="2_40n7k"]
[ext_resource type="Script" uid="uid://cap68osgbgpp8" path="res://scripts/shadow_blob_controller.gd" id="3_ivm6j"]
[ext_resource type="Script" uid="uid://cb8o1xduduljk" path="res://scripts/animation_manager.gd" id="4_f6de5"]
[ext_resource type="Resource" uid="uid://dui3on1g87vq4" path="res://resources/character_animations.tres" id="5_k1jc8"]
[ext_resource type="Script" uid="uid://d26qbnvudclsp" path="res://scripts/character_movement.gd" id="6_fjrip"]
[ext_resource type="Script" uid="uid://tj55tscby2xb" path="res://scripts/character_input.gd" id="7_smehm"]
[ext_resource type="PackedScene" uid="uid://b6qucsr4sc404" path="res://scenes/camera_controller.tscn" id="8_smehm"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sv6ik"]
radius = 0.207223
height = 0.998638

[sub_resource type="Gradient" id="Gradient_yttam"]
offsets = PackedFloat32Array(0.430939, 0.629834)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jl18w"]
gradient = SubResource("Gradient_yttam")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0283h"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_e5mgh")
metadata/_edit_group_ = true

[node name="CharacterVisual" type="Node3D" parent="."]

[node name="character-female-b2" parent="CharacterVisual" instance=ExtResource("2_40n7k")]
transform = Transform3D(-1.5, 0, 2.26494e-07, 0, 1.5, 0, -2.26494e-07, 0, -1.5, 0, 0, 0)

[node name="Skeleton3D" parent="CharacterVisual/character-female-b2/character-female-b" index="0"]
bones/4/rotation = Quaternion(0, 0, -0.382683, 0.92388)
bones/5/rotation = Quaternion(0, 0, 0.382683, 0.92388)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.509276, 0)
shape = SubResource("CapsuleShape3D_sv6ik")

[node name="Decal" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00286436, 0)
top_level = true
size = Vector3(0.75, 0.2, 0.75)
texture_albedo = SubResource("GradientTexture2D_jl18w")
modulate = Color(0.0807833, 0.0807833, 0.0807833, 1)
normal_fade = 0.373
distance_fade_enabled = true

[node name="ShadowBlobShapeCast3D" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_0283h")
target_position = Vector3(0, -30, 0)
max_results = 1
debug_shape_custom_color = Color(0.827451, 0, 1, 1)
script = ExtResource("3_ivm6j")

[node name="CharacterAnimation" type="Node" parent="." node_paths=PackedStringArray("input", "movement", "animation_player")]
script = ExtResource("4_f6de5")
input = NodePath("../CharacterInput")
movement = NodePath("../CharacterMovement")
animation_player = NodePath("../CharacterVisual/character-female-b2/AnimationPlayer")
animation_data = ExtResource("5_k1jc8")

[node name="CharacterMovement" type="Node" parent="." node_paths=PackedStringArray("input", "body", "visual")]
script = ExtResource("6_fjrip")
input = NodePath("../CharacterInput")
body = NodePath("..")
visual = NodePath("../CharacterVisual")
walk_speed = 8.0

[node name="CharacterInput" type="Node" parent="."]
script = ExtResource("7_smehm")

[node name="CameraController" parent="." node_paths=PackedStringArray("input") instance=ExtResource("8_smehm")]
input = NodePath("../CharacterInput")

[editable path="CharacterVisual/character-female-b2"]
